test/fail/basic_syntax/unterminated_multi_line_if.lly
#[
SyntaxError: Expected '}', not end of file.
    from unterminated_multi_line_if.lly:6
]#

if 1: {
